# IMU_G366

./: .gitignore  CMakeLists.txt  G366.md  README.md  file_fetch.bat  g366.h  gyro_api.cpp  gyro_api.h  main.cpp  main.h  main_ctx.cpp  main_ctx.h  toolchain-rpi4.cmake  uart.cpp  uart.h
